# forth-llvm

./: CMakeLists.txt
forth_runtime/: CMakeLists.txt  forth_runtime.c
src/: ast_builder.cpp  ast_builder.h  ast_codegen.cpp  ast_codegen.h  ast_entity.cpp  ast_entity.h  enviroment.h  main.cpp  token.cpp  token.h  tokenizer.cpp  tokenizer.h
tests/: call_function.fr  call_function2.fr
